dnl This is the bsp configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(common)

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(..)

BSP_CONFIGURE(.)

AM_CONDITIONAL(IS_AM30, test x$archdir = xsm30)
AM_CONDITIONAL(IS_ARM,  test x$archdir = xarm)
AM_CONDITIONAL(IS_FR30, test x$archdir = xfr30)
AM_CONDITIONAL(IS_FRV,  test x$archdir = xfrv)
AM_CONDITIONAL(IS_M68K, test x$archdir = xm68k)
AM_CONDITIONAL(IS_MIPS, test x$archdir = xmips)
AM_CONDITIONAL(IS_PPC,  test x$archdir = xppc)
AM_CONDITIONAL(IS_SPARC, test x$archdir = xsparc)

doc_dir=
if test -z "${with_multisubdir}"; then
  doc_dir=doc
fi
AM_CONDITIONAL(IS_DOC, test x${doc_dir} = xdoc)

AC_CONFIG_SUBDIRS($archdir $doc_dir)

if test "${multilib}" = "yes"; then
  multilib_arg="--enable-multilib"
else
  multilib_arg=
fi

AC_OUTPUT(Makefile,
[if test -n "$CONFIG_FILES"; then
 . ${bsp_basedir}/../config-ml.in
fi],
srcdir=${srcdir}
host=${host}
target=${target}
with_multisubdir=${with_multisubdir}
ac_configure_args="${multilib_arg} ${ac_configure_args}"
CONFIG_SHELL=${CONFIG_SHELL-/bin/sh}
bsp_basedir=${bsp_basedir}
CC="${CC}"
)
