dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(cpu.c)

dnl Can't be done in BSP_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../..)

BSP_CONFIGURE(..)

AC_CONFIG_SUBDIRS($board_list)

if test "${multilib}" = "yes"; then
  multilib_arg="--enable-multilib"
else
  multilib_arg=
fi

AC_OUTPUT(Makefile,
[if test -n "$CONFIG_FILES"; then
 . ${bsp_basedir}/../config-ml.in
fi],
srcdir=${srcdir}
host=${host}
target=${target}
with_multisubdir=${with_multisubdir}
ac_configure_args="${multilib_arg} ${ac_configure_args}"
CONFIG_SHELL=${CONFIG_SHELL-/bin/sh}
bsp_basedir=${bsp_basedir}
CC="${CC}"
)


