dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(eval1.c)

dnl Can't be done in BSP_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../..)

BSP_CONFIGURE(../..)

case "x${with_multisubdir}" in
  x)
    build_it=yes ;
    BOARD_LIB=libeval1.a ;
    files="../start.S ../crt0.S" ;
    links="eval1-start.S eval1-crt0.S" ;
    ;;
esac

AC_LINK_FILES(${files}, ${links})

AC_SUBST(BOARD_LIB)
AM_CONDITIONAL(BUILD_IT, test x$build_it = xyes)

AC_OUTPUT(Makefile)
