dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(tiger.c)

dnl Can't be done in BSP_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../..)

BSP_CONFIGURE(../..)

case "x${with_multisubdir}" in
  x | xnof)
    build_it=yes ;
    BOARD_LIB=libtiger.a ;
    files="../start.S ../crt0.S" ;
    links="tiger-start.S tiger-crt0.S" ;
    ;;
esac

AC_LINK_FILES(${files}, ${links})

AC_SUBST(BOARD_LIB)
AM_CONDITIONAL(BUILD_IT, test x$build_it = xyes)

AC_OUTPUT(Makefile)
