dnl This is the bsp/mips configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(jmr3904.c)

dnl Can't be done in BSP_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../..)

BSP_CONFIGURE(../..)

if test "x${with_multisubdir}" = "x" ; then
  build_it=yes ;
  BOARD_LIB=libjmr39.a ;
  files="../start.S ../crt0.S" ;
  links="jmr3904-start.S jmr3904-crt0.S" ;
fi

AC_LINK_FILES(${files}, ${links})

AC_SUBST(BOARD_LIB)
AM_CONDITIONAL(BUILD_IT, test x$build_it = xyes)

AC_OUTPUT(Makefile)
