dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(mbx.c)

dnl Can't be done in BSP_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../..)

BSP_CONFIGURE(../..)

case "x${with_multisubdir}" in
  xnof)
    build_it=yes ;
    BOARD_LIB=libmbxbsp.a ;
    files="../start.S ../crt0.S" ;
    links="mbx-start.S mbx-crt0.S" ;
    ;;
esac

AC_LINK_FILES(${files}, ${links})

AC_SUBST(BOARD_LIB)
AM_CONDITIONAL(BUILD_IT, test x$build_it = xyes)

AC_OUTPUT(Makefile)
