dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([libmathhelper/mathhelper.c])

dnl handles checking target
AC_CANONICAL_TARGET([])

AM_INIT_AUTOMAKE(mathhelper,1.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
    libmathhelper/Makefile
    testsuite/Makefile
    testsuite/mathhelper/Makefile ])
AC_OUTPUT
 
